.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Notification__mdt/Custom_Notification__mdt.object-meta.xml
<CustomObject>
    <description>Custom Notifications Configuration</description>
    <label>Custom Notification</label>
    <pluralLabel>Custom Notifications</pluralLabel>
</CustomObject>