.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Notification__mdt/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <inlineHelpText>Select Team for Notifications</inlineHelpText>
    <label>Team</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allocations</fullName>
                <default>true</default>
                <label>Allocations</label>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>