.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Notification__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>