.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Notification__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Custom Notification Developer Name</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>